; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libmemstat/extr_memstat.c_memstat_set_caller_uint64.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libmemstat/extr_memstat.c_memstat_set_caller_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memory_type = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @memstat_set_caller_uint64(%struct.memory_type* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.memory_type*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.memory_type* %0, %struct.memory_type** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.memory_type*, %struct.memory_type** %4, align 8
  %9 = getelementptr inbounds %struct.memory_type, %struct.memory_type* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  store i32 %7, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
